--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -23,7 +23,7 @@ set -g visual-silence on
 
 # === Status bar ===
 
-set -g status-position top
+set -g status-position bottom
 set -g status-justify left
 set -g status-style 'fg=red'
 
@@ -34,7 +34,7 @@ set -g status-right-style 'fg=white bg=#3b4261'
 set -g status-right '#[fg=#3b4261,bg=black]#[default]   #{pane_current_path}'
 set -g status-right-length 50
 
-set @flag '#{?window_active,,}#{?window_activity_flag, 󰦘,}#{?window_bell_flag, 󱅫,}#{?window_silence_flag, 󰝟,}#{?window_zoomed_flag, ,}#{?window_last_flag, ·,}'
+set -g @flag '#{?window_active,,}#{?window_activity_flag, 󰦘,}#{?window_bell_flag, 󱅫,}#{?window_silence_flag, 󰝟,}#{?window_zoomed_flag, ,}#{?window_last_flag, ·,}'
 
 setw -g window-status-current-style 'fg=black bg=green'
 setw -g window-status-current-format '▌#I▐ #W#{E:@flag} #[fg=green,bg=black]#[default]'
